# capstone

./: docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/api/: authApi.ts  axiosClient.ts  chatApi.ts  historyApi.ts  reminderApi.ts  reportApi.ts  specialistApi.ts
client/src/app/: provider.tsx  store.ts
client/src/components/common/: EmptyState.tsx  ErrorState.tsx  LoadingSkeleton.tsx  MedicalDisclaimer.tsx
client/src/components/layout/: PatientLayout.tsx  PatientSidebar.tsx
client/src/hooks/: hooks.ts
client/src/pages/: admin.tsx  chat.tsx  landing.tsx  login.tsx  signup.tsx
client/src/pages/Chat/: index.tsx
client/src/pages/Dashboard/: index.tsx
client/src/pages/History/: index.tsx
client/src/pages/Reminders/: index.tsx
client/src/pages/Reports/: ReportDetail.tsx  UploadReport.tsx
client/src/pages/Specialists/: index.tsx
client/src/redux/auth/: authSlice.ts
client/src/redux/chat/: chatSlice.ts
client/src/redux/report/: reportSlice.ts
client/src/router/: index.tsx
server/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 35736d4cad31_add_models.py  3d1fb94ddfb1_fix_model.py  997832ea1517_auth_model.py  bdc1a18d76d7_update_auth_model.py  ebd48a55de67_add_mediguide_models.py
server/app/: main.py
server/app/agents/: chat_agent.py  doctor_recommendation_agent.py  history_agent.py  image_reader_agent.py  medical_knowledge_agent.py  planner_agent.py  report_reader_agent.py  symptom_reader_agent.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: auth.py  chat.py  history.py  reminders.py  reports.py  specialists.py
server/app/config/: config.py
server/app/core/: database.py  errors.py  logging_config.py
server/app/dependencies/: dependencies.py  role.py
server/app/graph/: edges.py  graph.py  nodes.py  state.py
server/app/knowledge/: medical_knowledge_seed.md
server/app/mcp/: history_server.py  medical_server.py  recommendation_server.py  server.py
server/app/models/: __init__.py  appointment.py  audit_log.py  auth.py  chat_history.py  conversation.py  doctor_specialty.py  health_history.py  medical_report.py  reminder.py  specialist.py
server/app/rag/: embeddings.py  ingest.py  loader.py  retriever.py  splitter.py  vector_store.py
server/app/repositories/: db_repositories.py
server/app/route/: auth.py
server/app/schema/: auth.py  chat.py  history.py  reminder.py  report.py  specialist.py  user.schema.py
server/app/security/: security.py
server/app/service/: auth.py  chat_service.py  reminder_service.py  report_service.py  specialist_service.py  user.service.py
server/app/utils/: image_helpers.py  llm.py  seed.py  utils.py
server/tests/: test_workflow.py
