[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofile==3.11.1",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "alembic==1.18.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "authlib==1.7.2",
    "backports-tarfile==1.2.0",
    "bcrypt==5.0.0",
    "beartype==0.22.9",
    "cachetools==7.1.4",
    "caio==0.9.25",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cloudinary==1.45.0",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "cyclopts==4.20.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.138.0",
    "fastmcp==3.4.2",
    "fastmcp-slim==3.4.2",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "google-auth==2.55.0",
    "google-genai==2.10.0",
    "greenlet==3.5.2",
    "griffelib==2.1.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "importlib-metadata==9.0.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.2",
    "jaraco-functools==4.5.0",
    "joserfc==1.7.2",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-path==0.5.0",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "langchain==1.3.11",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.5",
    "langchain-protocol==0.0.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.6",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.9.1",
    "mako==1.3.12",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mcp==1.28.1",
    "mdurl==0.1.2",
    "more-itertools==11.1.0",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.43.0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pathable==0.6.0",
    "pgvector==0.4.2",
    "pillow==12.3.0",
    "platformdirs==4.10.0",
    "propcache==0.5.2",
    "psycopg2-binary==2.9.12",
    "py-key-value-aio==0.4.5",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.2",
    "pydantic[email]==2.13.4",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pypdf==6.14.2",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.32",
    "pywin32==312 ; sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "redis==8.0.1",
    "referencing==0.37.0",
    "regex==2026.6.28",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-rst==2.0.2",
    "rpds-py==2026.6.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.51",
    "sse-starlette==3.4.5",
    "starlette==1.3.1",
    "tavily-python==0.7.26",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uncalled-for==0.3.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.2",
    "uvicorn==0.49.0",
    "watchfiles==1.2.0",
    "websockets==15.0.1",
    "xxhash==3.7.1",
    "yarl==1.24.2",
    "zipp==4.1.0",
    "zstandard==0.25.0",
]
